2001-06-03  Per Bothner  <per@bothner.com>

	* ReplBuffer.java (<init>): Use new OutPort contructors, and
	specify pretty-printing.

2001-04-09  Per Bothner  <per@bothner.com>

	* Makefile.am (CLEANFILES):  Remove redundant definition.

2001-03-08  Per Bothner  <per@bothner.com>

	* Buffer.java, BufferContent.java, BufferKeymap.java,
	BufferReader.java, Command.java, Marker.java, MarkerReader.java,
	Menu.java,ProcessMode.java, Window.java,emacs.scm}:
	Update gnu.kawa.util->gnu.lists, AbstractString->CharSequence,
	marker-kind to isAfter boolean, array->getArray(), length->size.
	* Marker.java (isPoint):  New method
	Inherit from gnu.lists.SeqPosition.
	* IgnoreAction.java:  New class, extends javax.swing.text.TextAction.
	* Makefile.am:  Update acordingly.
	* BufferContent.java (getChars):  Shift gap to minimize copying.

2000-11-21  Per Bothner  <per@bothner.com>

	* Makefile.am, Makefile.in (EXTRA_DIST):  Include $(EXTRA_JAVA).

2000-10-15  Per Bothner  <per@bothner.com>

	* emacs.scm:  Tweaking of return types, default handling.

2000-06-26  Per Bothner  <per@bothner.com>

	* BufferKeymap.java (toString(KeyStroke)):  New static method.

2000-06-19  Per Bothner  <per@bothner.com>

	* package.html:  Point to www.JEmacs.net.

	* BufferKeymap.java (ignorable):  Don't ignore '\n' or '\t'.

	* Command.java (processInteractionString):  Accept 'F'.

	* ReplBuffer.java (<init>):  Use redStyle for inputStyle.
	* Buffer.java (<init>):  Default inputStyle to defaultStyle.

2000-06-18  Per Bothner  <per@bothner.com>

	* Buffer.java (markMarker):  New field.
	(checkMark, getMarkMarker):  New methods.
	* Window.java:  Now also implements ChangeListener.
	(activateRegion):  New method.
	(select(Caret)):  New method.

	* Buffer.java (charHeight, charWidth):  Moved to Window.
	* Window.java (charHeight, charWidth):  New fields, moved from Buffer.
	(getCharSize):  New method.
	(getHeightInLines, getWidthInColumns):  Update accordingly.
