@@ -6,14 +6,12 @@
 
   <body>
 <p>
+Provides various building blocks for building an Emacs-like text editor.
+It also provides a number of Scheme procedures that have the same name
+and similar functionality as the Emacs Lisp functions.
 Somewhat out of date.
 Check the <a href="http://www.JEmacs.net/">JEmacs home page</a>
 for more information.
-<p>
-Provides various building blocks
-for building an Emacs-like text editor.  It also provides a
-number of Scheme procedures that have the same name and similar
-functionality as the Emacs Lisp functions.
 <p>
 It uses the Swing tool-kit.
 
