@@ -1,3 +1,8 @@
+2001-06-17  Per Bothner  <per@bothner.com>
+
+	* Buffer.java (makeBufferLocal):  Moved here from Symbol.
+	* Command.java:  Handle Symbol moved and removal of Binding2.
+
 2001-06-03  Per Bothner  <per@bothner.com>
 
 	* ReplBuffer.java (<init>): Use new OutPort contructors, and
